--- a/cell_classification.ipynb
+++ b/cell_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cell_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOYzcmMD2eCpDxdvpq4CV2s",
+      "authorship_tag": "ABX9TyNcnGWUmh2yFYrT2uMfkmc6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,53 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z_24dzEWPJww"
+        "id": "z_24dzEWPJww",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e07d4aa8-c839-452d-fab7-2ddd723b967e"
+      },
+      "source": [
+        "print(\"hello world!\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello world!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EFND6BsvROtJ",
+        "outputId": "dfcbb207-da87-446e-a9f8-5d900839504d"
+      },
+      "source": [
+        "print(\"Michael Woo\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Michael Woo\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jE6vXHtwRdF0"
       },
       "source": [
         ""
