added guidelines for project

--- a/cell_classification.ipynb
+++ b/cell_classification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "mount_file_id": "https://github.com/MichaelWoo-git/Cell_Recognition_Machine_Learning/blob/main/cell_classification.ipynb",
-      "authorship_tag": "ABX9TyMye8S2+vB+85Z1culsP+4v",
+      "authorship_tag": "ABX9TyN5wjrTokDPj1H/RAyaZimm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "_6P2EfjgpU_7"
+      },
+      "source": [
+        "#Guideline for this Project,\n",
+        "\n",
+        "1. Top 10% teams worldwide as of midnight May 11, 2021 will get A in this class.\n",
+        "2. Feature engineering: create new features from the raw data\n",
+        "3. Supervised learning models: Choose 2 supervised learning models from W3, W4, W5\n",
+        "4. Advanced models: choose 1 from XGBoost W12 or Neural Network W13 or Deep learning W14 to build your supervised learning models\n",
+        "5. Model evaluation: For each of the supervised learning models, evaluate the model using the techniques from W10\n",
+        "6. If data size is too big and your model is too slow, feel free to choose small set for your project.\n",
+        "7. Your jupyter submission should be in an article quality. Do NOT print huge data set in the notebook. Use head(). Use plotting to visualize your analysis and results. Use markdown to write your comments.\n",
+        "8. If you are not in the top 10% teams worldwide, your score is based on completeness on every step.\n",
+        "9. Submit in HTML and ipynb format on canvas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ULh6hco7lA3M"
       },
       "source": [
@@ -48,7 +67,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,15 +83,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "zv2rUut4x90A",
-        "outputId": "4981d959-97ee-417f-99f7-b6cbfeb518c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4981d959-97ee-417f-99f7-b6cbfeb518c6"
       },
       "source": [
         "! ls drive/MyDrive/data_files_kaggle/hpa-single-cell-image-classification/train_data/* | wc -l"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +119,7 @@
       "source": [
         "from google.colab import drive"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +139,7 @@
       "source": [
         "train_data = pd.read_csv(\"/content/drive/MyDrive/data_files_kaggle/hpa-single-cell-image-classification/train.csv\")"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +155,7 @@
       "source": [
         "train_data"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +289,7 @@
         "         \"Centrosome\",\"Plasma_membrane\",\"Mitochondria\",\"Aggresome\",\"Cytosol\",\n",
         "         \"Vesicles_and_punctate_cytosolic_patterns\",\"Negative\",\"dummy\"]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +304,7 @@
       "source": [
         "labels"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +356,7 @@
         "train_data[\"Label\"] = train_data[\"Label\"].str.split(\"|\")\n",
         "df = pd.DataFrame(columns=labels)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +384,7 @@
         "train_data = train_data.join(df)\n",
         "train_data.drop(\"dummy\",axis=1, inplace=True)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +400,7 @@
       "source": [
         "train_data.head()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +618,7 @@
         "  #                  copyfile('/content/drive/MyDrive/data_files_kaggle/hpa-single-cell-image-classification/train/'+ file, '/content/drive/MyDrive/data_files_kaggle/hpa-single-cell-image-classification/train_data/'+ marker+\"/\"+name +\".png\")\n",
         "\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     }
   ]
