--- a/cell_classification.ipynb
+++ b/cell_classification.ipynb
@@ -6,8 +6,7 @@
       "name": "cell_classification.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "mount_file_id": "https://github.com/MichaelWoo-git/Cell_Recognition_Machine_Learning/blob/main/cell_classification.ipynb",
-      "authorship_tag": "ABX9TyN5wjrTokDPj1H/RAyaZimm",
+      "authorship_tag": "ABX9TyNO09lkBqzYlNWY+xGMDqD6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +66,71 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DcJX7dIzlKEL"
+      },
+      "source": [
+        "Would want to do this import ot extract my data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q2KLK3tcwXoh",
+        "outputId": "b7cd2559-0484-487f-daa9-3357c2fbd298",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VoUHl-IdBN2D"
+      },
+      "source": [
+        "!ln -s \"/content/gdrive/MyDrive/data_files_kaggle\" \"/content/data_files_kaggle\""
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4n4pozsWBe-z"
+      },
+      "source": [
+        "I want to focus on my data folders on my drive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K1K8RHh9ADuR"
+      },
+      "source": [
+        "!ln -s \"/content/drive/MyDrive/data_files_kaggle\" \"/content/data_files_kaggle\""
+      ],
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -86,12 +149,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4981d959-97ee-417f-99f7-b6cbfeb518c6"
+        "outputId": "e32ebabb-926d-4df1-8347-13af654b8a71"
       },
       "source": [
-        "! ls drive/MyDrive/data_files_kaggle/hpa-single-cell-image-classification/train_data/* | wc -l"
+        "! ls data_files_kaggle/hpa-single-cell-image-classification/train_data/* | wc -l"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,26 +164,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DcJX7dIzlKEL"
-      },
-      "source": [
-        "Would want to do this import ot extract my data"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "q2KLK3tcwXoh"
-      },
-      "source": [
-        "from google.colab import drive"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -137,9 +180,9 @@
         "id": "OHV63E4xQ98E"
       },
       "source": [
-        "train_data = pd.read_csv(\"/content/drive/MyDrive/data_files_kaggle/hpa-single-cell-image-classification/train.csv\")"
+        "train_data = pd.read_csv(\"data_files_kaggle/hpa-single-cell-image-classification/train.csv\")"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -150,12 +193,12 @@
           "height": 419
         },
         "id": "9jX5zeG-EE0T",
-        "outputId": "8bf8678f-ea80-4cd5-8c2a-bc77c4c95b04"
+        "outputId": "f27a6d66-01b7-47b4-bebc-aa9723dc5cf6"
       },
       "source": [
         "train_data"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -264,7 +307,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 11
         }
       ]
     },
@@ -289,7 +332,7 @@
         "         \"Centrosome\",\"Plasma_membrane\",\"Mitochondria\",\"Aggresome\",\"Cytosol\",\n",
         "         \"Vesicles_and_punctate_cytosolic_patterns\",\"Negative\",\"dummy\"]"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -299,12 +342,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tq62e44rJ1x8",
-        "outputId": "c896252b-c787-4ad0-85a7-3050ae365a89"
+        "outputId": "540e5638-defe-431f-abaa-429e94659a68"
       },
       "source": [
         "labels"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +377,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 13
         }
       ]
     },
@@ -356,7 +399,7 @@
         "train_data[\"Label\"] = train_data[\"Label\"].str.split(\"|\")\n",
         "df = pd.DataFrame(columns=labels)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -384,7 +427,7 @@
         "train_data = train_data.join(df)\n",
         "train_data.drop(\"dummy\",axis=1, inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -395,12 +438,12 @@
           "height": 479
         },
         "id": "svX_rd_QKJfk",
-        "outputId": "a048654c-524e-44b1-b847-ce9ee9702372"
+        "outputId": "c49fb3b5-fdcd-4701-ff08-4bed7c8bebfd"
       },
       "source": [
         "train_data.head()"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -580,7 +623,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 16
         }
       ]
     },
