--- a/cellular_classification_kaggle.ipynb
+++ b/cellular_classification_kaggle.ipynb
@@ -1550,6 +1550,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Plot classification report results (SVM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(classification_report(y_test,y_pred, output_dict=True)).transpose()\n",
+    "plt.figure()\n",
+    "df[['precision','recall','f1-score']].iloc[0:19].plot(kind='bar',figsize=(16,10))\n",
+    "plt.legend(loc='best')\n",
+    "plt.title(\"Classification Report Plot\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Random Forest Classifer"
    ]
   },
@@ -1626,6 +1646,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Plot classification report results (Random Forest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(classification_report(y_test,y_pred, output_dict=True)).transpose()\n",
+    "plt.figure()\n",
+    "df[['precision','recall','f1-score']].iloc[0:19].plot(kind='bar',figsize=(16,10))\n",
+    "plt.legend(loc='best')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### XGBoost Classifer"
    ]
   },
@@ -1666,12 +1705,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Plot classification report results (XGBoost)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "! "
+    "df = pd.DataFrame(classification_report(y_test,y_pred, output_dict=True)).transpose()\n",
+    "plt.figure()\n",
+    "df[['precision','recall','f1-score']].iloc[0:19].plot(kind='bar',figsize=(16,10))\n",
+    "plt.legend(loc='best')\n",
+    "plt.title(\"Classification Report Plot\")"
    ]
   }
  ],
